--- a/news.txt
+++ b/news.txt
@@ -2,7 +2,7 @@
 
 We are excited to announce the first stable release of our Debug Mode! This update introduces several important features and improvements:
 
-[/indent] • [b]Project Addition:[/b] You can now add projects with [.knhg] files (Kage No Hitori Game). This format is specifically designed to facilitate the integration and management of projects within our system.
+[indent] • [b]Project Addition:[/b] You can now add projects with [.knhg] files (Kage No Hitori Game). This format is specifically designed to facilitate the integration and management of projects within our system.
  • [b]Automatic Game Updates:[/b] Our debug mode now supports automatic game updates. You no longer need to worry about manual updates; the system will handle everything for you![/indent]
 
 
