--- a/news.txt
+++ b/news.txt
@@ -11,9 +11,9 @@ We encourage you to try out this new version and share your feedback. Your input
 Thank you for your support!
 
 [b][color=blue]Contributors, devs, designers, testers and more:[/color][/b]
-[indent] • [color=red]BAIXXO[/color]
+[indent] • [color=orange]BAIXXO[/color]
  • [color=green]RetileCat[/color]
- • [color=orange]Care光[/color]
+ • [color=pink]Ux0sq[/color]
  • [color=purple]Popi⚘ - 光愛[/color]
  • [color=teal]NovaTsu[/color]
  • [color=pink][b]Wys 光[/b] - Our adorable star and the creator of Kage No Hitori![/color][/indent]
