--- a/news.txt
+++ b/news.txt
@@ -16,5 +16,6 @@ Thank you for your support!
  • [color=pink]Ux0sq[/color]
  • [color=purple]Popi⚘ - 光愛[/color]
  • [color=teal]NovaTsu[/color]
+ • [color=red]Mika[/color]
  • [color=pink][b]Wys 光[/b] - Our adorable star and the creator of Kage No Hitori![/color][/indent]
 
